--- a/index.html
+++ b/index.html
@@ -451,6 +451,10 @@
             <a href="page64.html"><img src="Screenshot 2024-11-19 180729.png"></a>
             <p>WCML Preston to Carlisle</p>
         </div>
+         <div class="box">
+            <a href="page65.html"><img src="MKN.jpeg"></a>
+            <p>WCML Preston to Carlisle</p>
+        </div>
     </div>
     <script>
         const toggleSwitch = document.getElementById('theme-toggle');
