--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
          <div class="box">
             <a href="page65.html"><img src="MKN.jpeg"></a>
-            <p>WCML Preston to Carlisle</p>
+            <p>Ludwigsbahn: Manheim - Kaiserslautern</p>
         </div>
     </div>
     <script>
