--- a/page65.html
+++ b/page65.html
@@ -47,6 +47,13 @@
             <li>DB BR 406 ICE 3</li>
             <li>DB BR 411 ICE T (requires Frankfurt to Fulda)</li>
             <li>BR 628.2 (requires Niddertalbahn)</li>
+            <li>BR 193 Vectron (requires Frankfurt to Fulda or the Railpool Vectron)</li>
+            <li>DB BR 101 (original) (Requires Haupstrecke Rhein Ruhr and BR 101 add-on)</li>
+            <li>BR 155 (requires Ruhr Sieg Nord and BR 155 add-on or Bremen to Oldenburg)</li>
+            <li>BR 185 RP (requires Dresden to Chemnitz)</li>
+            <li>BR 185.5 MRCE (requires Rhein Ruhr Osten)</li>
+            <li>DB BR 612 (requires Dresden to Chemnitz)</li>
+            <li>TGV Duplex (requires LGV Med)</li>
           
           <h3>NOTE: No DB BR 111 services are included for PS4 and Xbox One</h3>
           
