--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </label>
         </div>
         <div class="top-right-message">
-            Join the TSC Discord server!
+            I bought a property in Egypt
         </div>
     </header>
     <div class="description">
